--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# ignore data file
+/mnt/home/elladki1/CMSE802/Final_Project/cmse802_project/data/
